# esp32_watering_system

./: platformio.ini
.github/workflows/: esphome_ci.yml  esphome_publish_firmware.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  release.yml  release_esphome.yml
esp32_bare/: .gitignore  platformio.ini
esp32_bare/drive/: captive.html
esp32_bare/include/: atomic.h  lv_conf.h  tft_setup.h  utils.hpp
esp32_bare/src/: analog_sensor.cpp  main.cpp  utils.cpp
esp32_bare/test/: test_pump_controller.cpp
esphome/: .gitignore  check_pump_action.yaml  globals.yaml  libcairo-gobject.2.dylib  libcairo-gobject.dylib  libcairo-script-interpreter.2.dylib  libcairo-script-interpreter.dylib  libcairo.dylib  lvgl.yaml  lvgl_header.yaml  numbers.yaml  pump_info_component.yaml  rendered.yaml  sprinkler.yaml  watering_system.yaml
esphome/internal/: button_sensor.yaml  functions.cpp  pump.yaml  soil_sensor.yaml
include/: analog_sensor.hpp
lib/pump_controller/: pump_config.cpp  pump_controller.cpp  pump_controller.hpp
lib/ui/: CMakeLists.txt  ui.c  ui.h  ui_Settings.c  ui_comp.c  ui_comp_hook.h  ui_comp_pumpcontainer.c  ui_comp_pumpcontainer.h  ui_helpers.h  ui_img_humidity_png.c  ui_img_moon_png.c  ui_img_no_wifi_png.c  ui_img_plant_bad_png.c  ui_img_sprinkler_png.c  ui_img_wifi_png.c
src/: main.cpp
ui/: watering_system.sll  watering_system.spj  watering_system_events.py
ui/components/: PumpContainer.ecomp
webapp/: firebase.json  firestore.rules  package-lock.json  package.json
webapp/functions/: .gitignore  package-lock.json  package.json
(+33 files in other folders)
